--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,7 +32,7 @@
     -->
     <title>Motorq TicketSys+</title>
   </head>
-  <body>
+  <body class="bootstrapOverride">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <nav class="navbar navbar-light bg-light shadow">
       <div class="container-fluid">
