--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -34,17 +34,8 @@
   </head>
   <body class="bootstrapOverride">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <nav class="navbar navbar-light bg-light shadow">
-      <div class="container-fluid">
-        <div class="mx-5 my-2">
-          <a class="navbar-brand ms-4" href="https://motorq.com/" target="_blank">
-            <img id="motorqLogo" src="motorqLogo.png" alt="Orange Motorq Logo" class="img-responsive" />
-          </a>
-          <p id="groceries" class="d-inline ">Groceries</p>
-        </div>
-      </div>
-    </nav>
-    <div id="root" class="mt-4"></div>
+
+    <div id="root" ></div>
 
     <!-- BS5 js cdn-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
